--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 	<div class="container">
 	 	<div class="row">
       <div class="col-md-6">
-        <h3 style="font-size: 36px;">수강생들 결과물</h3>
+        <h3 style="font-size: 36px;">수강생 결과물</h3>
 	 			<div class="hline"></div>
         <div id="carouselExampleIndicators" class="carousel slide text-center" data-ride="carousel" style="display:block;">
           <ol class="carousel-indicators">
